# p2_requetez_services_ia

./: README.md  main.py  pyproject.toml
.ipynb_checkpoints/: viasualisation-checkpoint.py
